--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="tukang">
                     <div class="tukang-image">
-                        <img src="#" alt="">
+                        <img src="foto/tukang.png" alt="">
                     </div>
                     <a href="#" target="_blank">
                         <button class="tukang-button">Pilih Saya</button>
